--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             
             <label for="hours" class="label-left">TIME TO ADD/SUBTRACT:</label>
             <div class="input-group  input-group-lg">                
-                <input type="number" id="hours-calc" name="hours" class="form-control" min="0" step="1" placeholder="Hours" title="Hr">
+                <input type="number" id="hours-calc" name="hours" class="form-control" min="0" step="1" placeholder="Hr" title="Hours">
                 <span class="input-group-addon">:</span>                    
                 <input type="number" id="minutes-calc" name="minutes" class="form-control" min="0" step="1" placeholder="Min" title="Minutes">
                 <span class="input-group-addon">:</span>
