--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Time Calculator">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="/timeCalc/css/timecalc.css">
+    <link rel="stylesheet" href="css/timecalc.css">
     <title>Hours from now</title>
 </head>
 
@@ -44,8 +44,8 @@
                 <label class="checkbox-inline" for="past"><input type="radio" name="pastfuture" id="past">In the past</label>
                 
             </div>
-            <div class=" col-lg-4">
-                <button class="btn btn-block btn-primary" id="calculate" type="button">Calculate</button>
+            <div class="col-lg-4 col-md-offset-4">
+                <button class="btn btn-lg btn-block btn-primary" id="calculate" type="button">Calculate</button>
             </div>
 
             </div>
