--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <fieldset>
         <div class='container'>
             <div class='buttons text-center'>
-                <button class='btn btn-lg btn-secondary' id='current' type='button'>Current Time</button>
-                <button class='btn btn-lg btn-secondary' id='time-type' type='button'>Switch to 24-Hour</button>
-                <button class='btn btn-lg btn-secondary' id='reset' type='button'>Reset</button>                
+                <button class='btn btn-secondary' id='current' type='button'>Current Time</button>
+                <button class='btn btn-secondary' id='time-type' type='button'>Switch to 24-Hour</button>
+                <button class='btn btn-secondary' id='reset' type='button'>Reset</button>                
             </div>
             
             <label for='hours' class='label-left'>STARTING TIME:</label>           
