--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
                 <span class='input-group-addon'>:</span>
                 <input type='number' id='seconds-calc' name='seconds' class='form-control' min='0' step='1' placeholder='Sec' title='Seconds'>
             </div>
-
-            <div  class='text-center'>
+<!-- TODO -->
+           <!--  <div  class='text-center'>
                 <label class='checkbox-inline' for='future'><input type='radio' name='pastfuture' id='future' checked>In the future</label>
 
                 <label class='checkbox-inline' for='past'><input type='radio' name='pastfuture' id='past'>In the past</label>
                 
-            </div>
+            </div> -->
             <div class='col-lg-4 col-md-offset-4'>
                 <button class='btn btn-lg btn-block btn-primary' id='calculate' type='button'>Calculate</button>
             </div>
@@ -134,7 +134,6 @@
                 if ($('#ampm').is(':checked')) {
                     if (hours < 12) {
                         hours = hours + 12;
-                        console.log(hours);
                     }
                 // if 12am, set hour to 0 for calculating in 24-hour time
                 } else if ($('#ampm').not(':checked')) {
