--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </span>
             </div>
 
-            <label for='hours' class='label-left'>TIME TO ADD/SUBTRACT:</label>
+            <label for='hours' class='label-left'>TIME TO ADD:</label>
             <div class='input-group  input-group-lg'>
                 <input type='number' id='hours-calc' name='hours' class='form-control' min='0' step='1' placeholder='Hr' title='Hours'>
                 <span class='input-group-addon'>:</span>
